syntax = "proto3";

package agent_config;
option go_package = "pkg/pb";
option swift_prefix = "";

import "agent.proto";
import "google/protobuf/empty.proto";

service AgentConfig {
  rpc ListProfiles(google.protobuf.Empty) returns (ListProfilesResponse);
  rpc Setup(SetupRequest) returns (SetupResponse);
}

message SetupRequest {
  agent.RequestHeader header = 1;
  string authentik_url = 2;
  string app_slug = 3;
  string client_id = 4;
  string access_token = 5;
  string refresh_token = 6;
}

message SetupResponse {
  agent.ResponseHeader header = 1;
}

message Profile {
  string name = 1;
}

message ListProfilesResponse {
  agent.ResponseHeader header = 1;
  repeated Profile profiles = 2;
}
